# beets-yttitle

./: .gitignore  README.md  pyproject.toml  ruff.toml
src/beetsplug/: super.py  youtubetitle.py
