[project]
name = "beets-yttitle"
version = "0.0.1"
description = "Improve beets auto-tagging for audio downloaded from YouTube"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["beets>=2.2.0,<3.0"]

[project.optional-dependencies]
dev = ["ruff>=0.12.12"]

[build-system]
requires = ["uv_build >= 0.8.15, <0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "beetsplug"
